Cleaned up code and added comments so others can understand the code easier.

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -1,3 +1,8 @@
+<!-- 
+Minesweeper.html
+Nov 29, 2018 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,6 +13,11 @@
 
 <body>
     <table id ='h-board'></table>
+    <button id='easy'>Easy</button>
+    <button id='normal'>Normal</button>
+    <button id='hard'>Hard</button>
+
+    <!-- Must execute board first, then the handler! -->
     <script src="./js/board.js"></script>
     <script src="./js/handler.js"></script>
 </body>
